<resources>
    <string name="app_name">Rock, paper, scissors</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="friends">FRIENDS</string>
    <string name="help">HELP</string>
    <string name="new_game">NEW GAME</string>
    <string name="recent_games">RECENT GAMES</string>
    <string name="create_account">Create Account</string>
    <string name="back_button">Back Button</string>
    <string name="password">Password</string>
    <string name="choose_gamemode">CHOOSE GAMEMODE</string>
    <string name="versus">Versus</string>
    <string name="play">Play</string>
    <string name="cpu">CPU</string>
    <string name="todo">TODO</string>
    <string name="pick_move">PICK YOUR MOVE</string>
    <string name="vsText">VS</string>
    <string name="playersView">Players View</string>
    <string name="cpuView">Cpu View</string>
    <string name="playerLabel">PLAYER</string>
    <string name="cpuLabel">CPU</string>
    <string name="randomChoice" >Random Choice</string>
    <string name="randomChoiceBtn" >Random Choice Button</string>
</resources>