<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainMenu"
    android:background="@drawable/background">


    <Button
        android:id="@+id/friendsBtn"
        android:layout_width="155dp"
        android:layout_height="66dp"
        android:layout_marginBottom="16dp"
        android:text="@string/friends"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/recentGamesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mainMenuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="154dp"
        android:layout_height="66dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="12dp"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/friendsBtn"
        app:layout_constraintEnd_toEndOf="@+id/mainMenuLabel"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainMenuLabel"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="151dp"
        android:layout_height="67dp"
        android:layout_marginBottom="156dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/recentGamesBtn"
        android:layout_width="152dp"
        android:layout_height="67dp"
        android:layout_marginBottom="16dp"
        android:text="@string/recent_games"
        android:textStyle="bold"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/helpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>